Update 'antbic6g5-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a795d4e738a8b6483e81893e71668ea182227a37@sha256:b5696ee250101568696e305d3422e6e546611eb55a8e6aba3369a1d1a78549b5

--- a/components/antbic6g5-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/antbic6g5-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: antbic6g5-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a795d4e738a8b6483e81893e71668ea182227a37@sha256:b5696ee250101568696e305d3422e6e546611eb55a8e6aba3369a1d1a78549b5
+          name: container-image
